# ifco_pose_estimator

./: CMakeLists.txt  README.md  install_dependencies.sh  package.xml
launch/: launch_ifco_pose_server.launch
src/: ifco_pose_client.cpp  ifco_pose_server.cpp
srv/: ifco_pose.srv
